<resources>
    <string name="app_name">ML Kit</string>
    <string name="camera_permission_rationale">This sample app requires camera, storage, and microphone
        permissions in order to demo the API.</string>
    <string name="ok">OK</string>
    <string name="settings">Settings</string>
    <string name="cancel">cancel</string>
    <string name="cloud_text">Cloud Text Recognition</string>
    <string name="textNer">TextEntityExtraction</string>
    <string name="online_text_ner">online ner</string>
    <string name="ner_v">Extraction</string>
    <string name="ner_text_hint">Beijing Tiananmen Square</string>
    <string name="select_from_album">Select image from album</string>
    <string name="take_photo">Take photo</string>
    <string name="video_frame">Video stream</string>
    <string name="versions">Version:</string>
    <string name="simplified_chinese">Simplified chinese</string>
    <string name="english_choose">English</string>
    <string name="japanese_choose">Japanese</string>
    <string name="korean_choose">Korean</string>
    <string name="latin_choose">Latin</string>
    <string name="get_data_failed">Failed to get data.</string>
    <string name="loading_data">Loading…</string>
    <string name="chinese">Chinese</string>
    <string name="nonetwork">nonetwork</string>
    <string name="abnormal">service is abnormal</string>
    <string name="speak_abnormal">Language and pronunciation mismatch</string>
    <string name="replay">replay</string>
    <string name="icr_s">ID Card Recognition</string>
    <string name="text_detection_s">Text Recognition</string>
    <string name="document_recognition_s">Document Recognition</string>
    <string name="aft_s">Audio File Transcription</string>
    <string name="bcr_s">Bank Card Recognition</string>
    <string name="ucr_s">General Card Recognition</string>
    <string name="asr_s">Speech Recognition</string>
    <string name="tts_s">Text to speech</string>
    <string name="document_skew">Document Skew Corretion</string>
    <string name="text_embedding">Text Embedding</string>
    <string name="document_recognition">Document</string>
    <string name="translate">Translation</string>
    <string name="id_card">ID card recognition</string>
    <string name="icr_cn">Chinese second-generation ID card</string>
    <string name="icr_vn">Vietnam ID card</string>
    <string name="aft">AFT</string>
    <string name="bcr">BCR</string>
    <string name="gcr">GCR</string>
    <string name="icr">ICR</string>
    <string name="text_detection">Text</string>
    <string name="asr">ASR</string>
    <string name="asr_local_short">Offline Short ASR</string>
    <string name="asr_local_long">Offline Long ASR</string>
    <string name="tts">TTS</string>
    <string name="textembedding">TEXTEMBEDDING</string>
    <string name="speechRtt">SpeechRtt</string>
    <string name="all">all</string>
    <string name="coming_soon">coming soon</string>
    <string name="back">back</string>
    <string name="translate_v">Translate</string>
    <string name="language_recognition">Language Recognition</string>
    <string name="elapsed_time">Elapsed Time: </string>
    <string name="zero_character"> 0 character</string>
    <string name="translate_text_hint">Machine Learning</string>
    <string name="intro">text to speak</string>
    <string name="tts_hint">enter the text to be synthesized.</string>
    <string name="queue_add">Start Speech</string>
    <string name="play">Play Result</string>
    <string name="release_tts">stop</string>
    <string name="pause">pause</string>
    <string name="resume">resume</string>
    <string name="speak_num">Exceeded the maximum synthesis number.maximum 500</string>
    <string name="icr_upload_self_photo">Upload photos of your ID card</string>
    <string name="icr_upload_face">Photo side</string>
    <string name="icr_upload_back">Other side</string>
    <string name="icr_hint_upload_valid_photo">Upload photos of your valid ID card.</string>
    <string name="icr_hint_image_not_complete">Something may be blocking important information in the photo. Retake the photo if needed.</string>
    <string name="icr_hint_ensure_user_info_security">Your personal information will be protected in accordance with the law.</string>
    <string name="recognition_results">Recognition results:</string>
    <string name="icr_mark">* Cloud service is for Chinese mainland residents only</string>
    <string name="device_side">Device Side</string>
    <string name="cloud_side">Cloud</string>
    <string name="gcr_upload_self_photo">Upload photos of your card</string>
    <string name="gcr_upload">Upload card</string>
    <string name="hk_pass">Hong Kong, Macao pass</string>
    <string name="hk_id_card">Hong Kong Identity Card</string>
    <string name="home_card">Mainland Travel Permit (Taiwan residents)</string>
    <string name="click_to_switch"><u>Click to switch</u></string>
    <string name="vedio_tip">Recognizing, please align the edges.</string>
    <string name="capture_tip">Taking photo…\nKeep the edges aligned</string>
    <string name="bcr_upload_self_photo">"Please upload the bank card"</string>
    <string name="bcr_upload">Upload card</string>
    <string name="record">Record</string>
    <string name="str_ok">OK</string>
    <string name="converting">Converting...</string>
    <string name="recording">Recording...</string>
    <string name="str_cancel">Cancel</string>
    <string name="convert_failed">Failed:</string>
    <string name="language">Language:</string>
    <string name="stop_record">stop</string>
    <string name="aft_type">Transcription Type</string>
    <string name="error_aft_network">Abnormal network connection</string>
    <string name="error_aft_internal">Internal error</string>
    <string name="error_aft_illegal_parameters">Illegal parameter</string>
    <string name="error_aft_authorize_failed">Authentication failed</string>
    <string name="error_aft_audio_length_overflow">Audio length overflow</string>
    <string name="error_aft_audio_transcript_failed">Audio transcript failed</string>
    <string name="start">start</string>
    <string name="please_speak">Please speak</string>
    <string name="example_say">You could say that.</string>
    <string name="example_one">I want to take a taxi to Wanda Plazaz</string>
    <string name="example_two">I want to see Infernal Affairs</string>
    <string name="example_three">Where is the nearest Shentong express</string>
    <string name="record_path">/mlkit-asr</string>
    <string name="record_text_name">text.txt</string>
    <string name="record_json_name">description.json</string>
    <string name="record_pcm_name">audio.pcm</string>
    <string name="error_no_network">ERROR: Network unavailable, please try again…</string>
    <string name="error_service_unavailable">ERROR: Service Unavailable</string>
    <string name="error_no_sound_times_exceed">ERROR: No speech detected within 6S, automatic disconnection</string>
    <string name="error_no_understand">ERROR: The server could not parse your voice</string>
    <string name="asr_sound_pickup_interface_type">Sound pickup interface type</string>
    <string name="asr_sound_pickup_interface_type_plugin">ASR Plugin</string>
    <string name="asr_sound_pickup_interface_type_custom">Custom</string>
    <string name="asr_mark">* This service is only available for Huawei mobile phones</string>
    <string name="style">Style:</string>
    <string name="mode">Play Mode:</string>
    <string name="volume">Volume:</string>
    <string name="speech_rate">Speech Rate:</string>
    <string name="queuing_mode">Queuing Mode</string>
    <string name="clear_mode">Clear Mode</string>
    <string name="please_enter_text">Please enter text~</string>
    <string name="male_zh">Male-zh</string>
    <string name="male_en">Male-en</string>
    <string name="female_fr">Female-fr</string>
    <string name="female_es">Female-es</string>
    <string name="female_en">Female-en</string>
    <string name="female_zh">Female-zh</string>
    <string name="female_de">Female-de</string>
    <string name="female_it">Female-it</string>
    <string name="male_en_eagle">Male-en-eagle</string>
    <string name="female_en_eagle">Female-en-eagle</string>
    <string name="female_th">female-th</string>
    <string name="female_ms">female-ms</string>
    <string name="female_ph">femail-ph</string>
    <string name="init_progress">50%</string>
    <string name="online_translate">online translation</string>
    <string name="offline_translate">offline translation</string>
    <string name="french">French</string>
    <string name="spanish">Spanish</string>
    <string name="German">German</string>
    <string name="hiai_tv_update_time" translatable="false">"更新时间：2022年02月20日"</string>
    <string name="tv_declare_statement_01" translatable="false">"“同声传译”是由华为终端有限公司（以下简称“我们”或“华为”）为您提供同声传译能力的应用。华为非常重视您的个人信息和隐私保护，我们将会按照法律要求和业界成熟的安全标准，为您的个人信息提供相应的安全保护措施。"</string>
    <string name="tv_declare_statement_02" translatable="false">"1.我们如何收集和使用您的个人信息"</string>
    <string name="tv_declare_statement_29" translatable="false">"我们将为您提供同声传译能力，在您使用相关业务功能的过程中，我们会处理下列提供功能所必需的信息，以便履行我们的合同义务。若您不提供相关信息，会影响到您使用本应用的相关功能。"</string>
    <string name="tv_declare_statement_35" translatable="false">"数据统计分析服务"</string>
    <string name="tv_declare_statement_36" translatable="false">"为了统计和分析功能使用情况，我们会收集您的设备标识符、应用及系统版本号、系统当前时间、设备类型、您使用本应用的信息，以优化我们的产品设计，为您提供更好服务。"</string>
    <string name="tv_declare_statement_08" translatable="false">"2.对未成年人的保护"</string>
    <string name="tv_declare_statement_09" translatable="false">"我们非常重视对未成年人个人信息的保护，华为将严格按照国家法律法规要求，对未成年人提供服务并对其提供保护。如果您是未成年人，需要您的父母或其他监护人同意您使用本应用，并同意相关应用的服务条款。父母或其他监护人也应采取适当的预防措施来保护未成年人，包括监督其对本应用的使用。"</string>
    <string name="tv_declare_statement_30" translatable="false">"特别地，如果您是儿童 (不满十四周岁的未成年人)，在使用我们的服务前，请务必通知您的父母或其他监护人一起仔细阅读本声明以及我们专门制定的《华为消费者业务儿童隐私保护声明》(https://consumer.huawei.com/cn/privacy/child-policy)，并在您的父母或其他监护人同意或指导后，使用我们的服务或向我们提供信息。如果您是儿童的父母或其他监护人，请确保您监护的儿童在您的同意或指导下，使用我们的服务和向我们提供信息。"</string>
    <string name="tv_declare_statement_10" translatable="false">"3.管理您的个人信息"</string>
    <string name="tv_declare_statement_31" translatable="false">"华为非常尊重您对个人信息的关注，并为您提供了以下数据主体权利及选择。"</string>
    <string name="tv_declare_statement_11" translatable="false">"您可以前往应用“设置”&gt;“应用”&gt; “应用管理”&gt;“同声传译”&gt;“权限”，关闭相关权限，以停止我们对您的个人信息的处理。"</string>
    <string name="tv_declare_statement_13" translatable="false">"4.信息存储地点及期限"</string>
    <string name="tv_declare_statement_14" translatable="false">"上述信息将会传输并保存至中华人民共和国境内的服务器。"</string>
    <string name="tv_declare_statement_15" translatable="false">"我们仅在实现本声明所述目的所必需的时间内保留您的个人信息，并在超出下述保留时间后删除或匿名化处理您的个人信息，除非法律法规另有要求。"</string>
    <string name="tv_declare_statement_16" translatable="false">"您的个人数据具体留存时间如下："</string>
    <string name="tv_declare_statement_37" translatable="false">"您的设备标识符、应用及系统版本号、系统当前时间、设备类型、您使用本应用的信息将会在华为服务器保存3个月，以便我们不断优化产品设计，为您提供更好的服务体验。"</string>
    <string name="tv_declare_statement_20" translatable="false">"此外，当我们的产品或服务发生停止运营的情形时，我们将以推送通知、公告等形式通知您，并在合理的期限内删除您的个人信息或进行匿名化处理。"</string>
    <string name="tv_declare_statement_21" translatable="false">"5.如何联系我们"</string>
    <string name="tv_declare_statement_22" translatable="false">"我们指定了个人信息保护负责人，您可通过此链接 (https://consumer.huawei.com/cn/legal/privacy-questions/) 联系个人信息保护负责人，也可通过访问隐私问题页面 (https://consumer.huawei.com/cn/legal/privacy-questions/) 与我们取得联系，我们会尽快回复。"</string>
    <string name="tv_declare_statement_23" translatable="false">"如果您对我们的回复不满意，特别是当我们的个人信息处理行为损害了您的合法权益时，您还可以通过向有管辖权的人民法院提起诉讼、向行业自律协会或政府相关管理机构投诉等外部途径进行解决。您也可以向我们了解可能适用的相关投诉途径的信息。"</string>
    <string name="tv_declare_statement_24" translatable="false">"华为将始终遵照我们的隐私政策来收集和使用您的信息。有关我们的隐私政策，可参阅华为消费者业务隐私声明（https://consumer.huawei.com/en/legal/privacy-policy/worldwide/）。"</string>
    <string name="more_operation_privacy" translatable="false">"隐私声明"</string>
    <string name="know" translatable="false">我已知悉上述声明</string>
</resources>