<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="@drawable/dialog_background"
    android:layout_height="wrap_content">
    <TextView
        android:id="@+id/simple_cn"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_icon_width"
        android:textSize="@dimen/text_size_13sp"
        android:gravity="center"
        android:textColor="@drawable/text_selector"
        android:text="@string/chinese">
    </TextView>
    <View
        style="@style/common_line"/>
    <TextView
        android:id="@+id/english"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_icon_width"
        android:textSize="@dimen/text_size_13sp"
        android:gravity="center"
        android:textColor="@drawable/text_selector"
        android:text="@string/english_choose">
    </TextView>
    <View
        style="@style/common_line"/>

    <TextView
        android:id="@+id/french"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_icon_width"
        android:textSize="@dimen/text_size_13sp"
        android:gravity="center"
        android:textColor="@drawable/text_selector"
        android:text="@string/french">
    </TextView>
    <View
        style="@style/common_line"/>
    <TextView
        android:id="@+id/spanish"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_icon_width"
        android:textSize="@dimen/text_size_13sp"
        android:gravity="center"
        android:textColor="@drawable/text_selector"
        android:text="@string/spanish">
    </TextView>
    <View
        style="@style/common_line"/>
    <TextView
        android:id="@+id/German"
        android:layout_width="match_parent"
        android:layout_height="@dimen/start_icon_width"
        android:textSize="@dimen/text_size_13sp"
        android:gravity="center"
        android:textColor="@drawable/text_selector"
        android:text="@string/German">
    </TextView>
    <View
        style="@style/common_line"/>


</LinearLayout>